fix imgaes not showing on github

--- a/sass/main.css
+++ b/sass/main.css
@@ -13,7 +13,7 @@ body {
 
 main,
 .index {
-  background-image: url(/assets/home/background-home-desktop.jpg);
+  background-image: url(../assets/home/background-home-desktop.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -27,7 +27,7 @@ main,
   overflow-x: hidden; }
 
 .destination-page {
-  background-image: url(/assets/destination/background-destination-desktop.jpg);
+  background-image: url(../assets/destination/background-destination-desktop.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -41,7 +41,7 @@ main,
   overflow-x: hidden; }
 
 .crew-page {
-  background-image: url(/assets/crew/background-crew-desktop.jpg);
+  background-image: url(../assets/crew/background-crew-desktop.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -55,7 +55,7 @@ main,
   overflow-x: hidden; }
 
 .technology-page {
-  background-image: url(/assets/technology/background-technology-desktop.jpg);
+  background-image: url(../assets/technology/background-technology-desktop.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
